syntax = "proto3";

package user_center;

option go_package = "./v1;v1";

import "validate/validate.proto";
import "resource/resource.proto";
import "user_center_channel.proto";

message App {
  uint32 id = 1;
  string keyword = 2;
  string logo = 3;
  string name = 4;
  bool status = 5;
  bool allow_registry = 6;
  string description = 7;
  repeated OuterChannel channels = 8;
  uint32 created_at = 9;
  uint32 updated_at = 10;
  resource.File resource = 11;
}

message GetAppByKeywordRequest{
  string keyword = 1[(validate.rules).string = {min_len: 1}];
}

message PageAppRequest{
  uint32 page = 1[(validate.rules).uint32 = {gt: 0}];
  uint32 page_size = 2[(validate.rules).uint32 = {gt: 0,lte:50}];
  optional string keyword = 3;
  optional string name = 4;
}

message PageAppReply{
  uint32 total = 1;
  repeated App list = 2;
}

message AddAppRequest {
  string keyword = 1[(validate.rules).string = {min_len:1}];
  string logo = 2[(validate.rules).string = {min_len:1}];
  string name = 3[(validate.rules).string = {min_len:1}];
  string description = 4[(validate.rules).string = {min_len:1}];
  optional bool status = 5;
  optional bool allow_registry = 6;
  repeated uint32 channel_ids = 7;
}

message AddAppReply {
  uint32 id = 1;
}

message UpdateAppRequest {
  uint32  id = 8[(validate.rules).uint32 = {gt:0}];
  string keyword = 1[(validate.rules).string = {min_len:1}];
  string logo = 2[(validate.rules).string = {min_len:1}];
  string name = 3[(validate.rules).string = {min_len:1}];
  string description = 4[(validate.rules).string = {min_len:1}];
  optional bool status = 5;
  optional bool allow_registry = 6;
  repeated uint32 channel_ids = 7;
}

message DeleteAppRequest{
  uint32 id = 1[(validate.rules).uint32 = {gt:0}];
}
